multilingual & responsiveness updates

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -1138,6 +1138,125 @@
       "errorMessage": "错误信息",
       "postToEtims": "发布到Etims",
       "debitNote": "借项通知单"
+    },
+    "claimDetails": {
+      "claimDetails": "索赔详情",
+      "claimTransactionDetails": "索赔交易详情",
+      "claimNo": "索赔编号",
+      "insured": "被保险人",
+      "riskWEF": "风险WEF",
+      "nextReviewDate": "下次审查日期",
+      "intermediary": "中介",
+      "clientName": "客户名称",
+      "risk": "风险",
+      "riskWET": "风险WET",
+      "lossDescription": "损失描述",
+      "claimRemarks": "索赔备注",
+      "product": "产品",
+      "riskValue": "风险价值",
+      "claimLossDate": "索赔损失日期",
+      "claimNotificationDate": "索赔通知日期",
+      "currency": "货币",
+      "transactionType": "交易类型",
+      "voucherNo": "凭证编号",
+      "paymentDate": "付款日期",
+      "authorisedDate": "授权日期",
+      "invoiceNo": "发票编号",
+      "paymentType": "付款类型",
+      "bankAccount": "银行账户",
+      "chequeNo": "支票号",
+      "exciseDuty": "消费税",
+      "payee": "收款人",
+      "paymentMode": "支付方式",
+      "authorised": "已授权",
+      "ownGrossAmount": "自有总金额",
+      "voucherCurrency": "凭证货币",
+      "wHTXAmount": "WHTX金额",
+      "netPaid": "净支付",
+      "retention": "保留",
+      "correspondent": "通讯员",
+      "coinAmount": "硬币金额",
+      "authorisedBy": "授权人",
+      "accountType": "账户类型",
+      "baseCurrency": "基本货币",
+      "invoiceAmount": "发票金额",
+      "paymentDesc": "支付说明",
+      "reinstatementAmt": "复职金额",
+      "perilId": "风险ID",
+      "peril": "风险",
+      "voucherAmountType": "凭证金额类型",
+      "excessAllowed": "允许超额",
+      "excessAmount": "超额金额",
+      "noviceExcessAmt": "新手超额金额",
+      "reinstatementAmount": "复职金额",
+      "desc": "描述",
+      "amount": "金额",
+      "withholdVAT": "扣留增值税",
+      "vatRate": "增值税税率",
+      "vatAmount": "增值税金额",
+      "whtx": "预提税",
+      "whtxRate": "预提税税率",
+      "whtxAmount": "预提税金额",
+      "exciseDuty": "消费税",
+      "exciseDutyRate": "消费税税率",
+      "accountNo": "账户号码",
+      "bank": "银行",
+      "bankBranch": "银行分行",
+      "transactionNo": "交易号",
+      "fcCode": "FC代码",
+      "description": "描述",
+      "facultativeAccount": "临时账户",
+      "rate": "费率",
+      "amountCovered": "承保金额",
+      "balance": "余额",
+      "layer": "层",
+      "retAmount": "保留金额",
+      "excess": "超额",
+      "amountToRecover": "待追回金额",
+      "amountRecovered": "追回金额",
+      "UWYR": "UWYR",
+      "poolRate": "池费率",
+      "poolAmt": "池金额",
+      "code": "代码",
+      "reiCode": "再保险代码",
+      "shortDescription": "简短描述",
+      "reasonForPending": "待处理原因",
+      "claimant": "索赔人",
+      "perilType": "风险类型",
+      "claimAmt": "索赔金额",
+      "adjAmt": "调整金额",
+      "limitAmount": "限额",
+      "excessAmt": "超额金额",
+      "depreciation": "折旧",
+      "reserveAmount": "储备金额",
+      "recoveries": "回收",
+      "salvages": "抢救",
+      "payments": "付款",
+      "remarks": "备注",
+      "underwritingRate": "承保费率",
+      "reinsurerID": "再保险公司ID",
+      "reinsurer": "再保险公司",
+      "submissionStatus": "提交状态",
+      "treatyAmount": "合约金额",
+      "compRet": "公司保留",
+      "amtToReserve": "储备金额",
+      "recovered": "回收的",
+      "type": "类型",
+      "value": "价值",
+      "transType": "交易类型",
+      "transNo": "交易编号",
+      "transDate": "交易日期",
+      "grossLiability": "总责任",
+      "netLiability": "净责任",
+      "paidAmount": "支付金额",
+      "authoriseBy": "授权人",
+      "authoriseDate": "授权日期",
+      "action": "操作",
+      "revisionOwn": "自我修订",
+      "revisionAuthorised": "修订已授权",
+      "ownShare": "自有份额",
+      "revisionDate": "修订日期",
+      "revisionRemarks": "修订备注"
     }
   },
   "fms": {
