--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1137,6 +1137,125 @@
       "errorMessage": "Fehlermeldung",
       "postToEtims": "In Etims buchen",
       "debitNote": "Lastschrift"
+    },
+    "claimDetails": {
+      "claimDetails": "Schadensdetails",
+      "claimTransactionDetails": "Schadenstransaktionsdetails",
+      "claimNo": "Schadensnummer",
+      "insured": "Versicherter",
+      "riskWEF": "Risiko ab",
+      "nextReviewDate": "Nächstes Überprüfungsdatum",
+      "intermediary": "Vermittler",
+      "clientName": "Kundenname",
+      "risk": "Risiko",
+      "riskWET": "Risiko bis",
+      "lossDescription": "Schadenbeschreibung",
+      "claimRemarks": "Schadenbemerkungen",
+      "product": "Produkt",
+      "riskValue": "Risiko-Wert",
+      "claimLossDate": "Schadensdatum",
+      "claimNotificationDate": "Schadenmeldung",
+      "currency": "Währung",
+      "transactionType": "Transaktionstyp",
+      "voucherNo": "Belegnummer",
+      "paymentDate": "Zahlungsdatum",
+      "authorisedDate": "Genehmigungsdatum",
+      "invoiceNo": "Rechnungsnummer",
+      "paymentType": "Zahlungsart",
+      "bankAccount": "Bankkonto",
+      "chequeNo": "Schecknummer",
+      "exciseDuty": "Verbrauchssteuer",
+      "payee": "Empfänger",
+      "paymentMode": "Zahlungsweise",
+      "authorised": "Genehmigt",
+      "ownGrossAmount": "Eigenbrutto",
+      "voucherCurrency": "Belegwährung",
+      "wHTXAmount": "WHTX-Betrag",
+      "netPaid": "Netto gezahlt",
+      "retention": "Selbstbehalt",
+      "correspondent": "Korrespondent",
+      "coinAmount": "Münzbetrag",
+      "authorisedBy": "Genehmigt von",
+      "accountType": "Kontotyp",
+      "baseCurrency": "Basiswährung",
+      "invoiceAmount": "Rechnungsbetrag",
+      "paymentDesc": "Zahlungsbeschreibung",
+      "reinstatementAmt": "Wiederherstellungsbetrag",
+      "perilId": "Gefahren-ID",
+      "peril": "Gefahr",
+      "voucherAmountType": "Gutscheinbetragstyp",
+      "excessAllowed": "Überschuss erlaubt",
+      "excessAmount": "Überschussbetrag",
+      "noviceExcessAmt": "Anfängerüberschussbetrag",
+      "reinstatementAmount": "Wiederherstellungsbetrag",
+      "desc": "Beschreibung",
+      "amount": "Betrag",
+      "withholdVAT": "Umsatzsteuer einbehalten",
+      "vatRate": "Umsatzsteuersatz",
+      "vatAmount": "Umsatzsteuerbetrag",
+      "whtx": "Quellensteuer",
+      "whtxRate": "Quellensteuersatz",
+      "whtxAmount": "Quellensteuerbetrag",
+      "exciseDuty": "Verbrauchssteuer",
+      "exciseDutyRate": "Verbrauchssteuersatz",
+      "accountNo": "Kontonummer",
+      "bank": "Bank",
+      "bankBranch": "Bankfiliale",
+      "transactionNo": "Transaktionsnr.",
+      "fcCode": "FC-Code",
+      "description": "Beschreibung",
+      "facultativeAccount": "Fakultatives Konto",
+      "rate": "Satz",
+      "amountCovered": "Abgedeckter Betrag",
+      "balance": "Saldo",
+      "layer": "Schicht",
+      "retAmount": "Rückbehaltungsbetrag",
+      "excess": "Überschuss",
+      "amountToRecover": "Zu bergender Betrag",
+      "amountRecovered": "Bergter Betrag",
+      "UWYR": "UWYR",
+      "poolRate": "Poolrate",
+      "poolAmt": "Poolbetrag",
+      "code": "Code",
+      "reiCode": "Reicode",
+      "shortDescription": "Kurzbeschreibung",
+      "reasonForPending": "Grund für ausstehend",
+      "claimant": "Anspruchsteller",
+      "perilType": "Gefahrentyp",
+      "claimAmt": "Anspruchsbetrag",
+      "adjAmt": "Angepasster Betrag",
+      "limitAmount": "Grenzbetrag",
+      "excessAmt": "Überschussbetrag",
+      "depreciation": "Abschreibung",
+      "reserveAmount": "Reservebetrag",
+      "recoveries": "Rückforderungen",
+      "salvages": "Bergungen",
+      "payments": "Zahlungen",
+      "remarks": "Bemerkungen",
+      "underwritingRate": "Versicherungsrate",
+      "reinsurerID": "Rückversicherer-ID",
+      "reinsurer": "Rückversicherer",
+      "submissionStatus": "Einreichungsstatus",
+      "treatyAmount": "Vertragsbetrag",
+      "compRet": "Komplette Ret.",
+      "amtToReserve": "Betrag zur Reserve",
+      "recovered": "Wiedererlangt",
+      "type": "Typ",
+      "value": "Wert",
+      "transType": "Transaktionstyp",
+      "transNo": "Transaktionsnummer",
+      "transDate": "Transaktionsdatum",
+      "grossLiability": "Bruttohaftung",
+      "netLiability": "Nettohaftung",
+      "paidAmount": "Bezahlter Betrag",
+      "authoriseBy": "Autorisieren durch",
+      "authoriseDate": "Autorisierungsdatum",
+      "action": "Aktion",
+      "revisionOwn": "Eigene Revision",
+      "revisionAuthorised": "Revision autorisiert",
+      "ownShare": "Eigener Anteil",
+      "revisionDate": "Revisionsdatum",
+      "revisionRemarks": "Revisionsbemerkungen"
     }
   },
   "fms": {
