--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1147,6 +1147,127 @@
       "errorMessage":"Error message",
       "postToEtims": "Post to Etims",
       "debitNote": "Debit note"
+    },
+    "claimDetails": {
+      "claimDetails": "Claim details",
+      "claimTransactionDetails": "Claim transaction details",
+      "claimNo": "Claim no",
+      "insured": "Insured",
+      "riskWEF": "Risk WEF",
+      "nextReviewDate": "Next review date",
+      "intermediary": "Intermediary",
+      "clientName": "Client name",
+      "risk": "Risk",
+      "riskWET": "Risk WET",
+      "lossDescription": "Loss description",
+      "claimRemarks": "Claim remarks",
+      "product": "Product",
+      "riskValue": "Risk value",
+      "claimLossDate": "Claim loss date",
+      "claimNotificationDate": "Claim notification date",
+      "currency": "Currency",
+      "transactionType": "Transaction type",
+      "voucherNo": "Voucher no",
+      "paymentDate": "Payment date",
+      "authorisedDate": "Authorised date",
+      "invoiceNo": "Invoice no",
+      "paymentType": "Payment type",
+      "bankAccount": "Bank account",
+      "chequeNo": "Cheque no",
+      "payee": "Payee",
+      "paymentMode": "Payment mode",
+      "authorised": "Authorised",
+      "ownGrossAmount": "Own gross amount",
+      "voucherCurrency": "Voucher currency",
+      "wHTXAmount": "WHTX amount",
+      "netPaid": "Net paid",
+      "retention": "Retention",
+      "correspondent": "Correspondent",
+      "coinAmount": "Coin amount",
+      "authorisedBy": "Authorised by",
+      "accountType": "Account type",
+      "baseCurrency": "Base currency",
+      "invoiceAmount": "Invoice amount",
+      "paymentDesc": "Payment desc",
+      "reinstatementAmt": "Reinstatement amt",
+      "perilId": "Peril id",
+      "peril": "Peril",
+      "voucherAmountType": "Voucher amount type",
+      "excessAllowed": "Excess allowed",
+      "excessAmount": "Excess amount",
+      "noviceExcessAmt": "Novice excess amt",
+      "reinstatementAmount": "Reinstatement amount",
+      "desc": "Desc",
+      "amount": "Amount",
+      "withholdVAT": "Withhold VAT",
+      "vatRate": "VAT rate",
+      "vatAmount": "VAT amount",
+      "whtx": "Whtx",
+      "whtxRate": "Whtx rate",
+      "whtxAmount": "Whtx amount",
+      "exciseDuty": "Excise duty",
+      "exciseDutyRate": "Excise duty rate",
+      "accountNo": "Account no",
+      "bank": "Bank",
+      "bankBranch": "Bank branch",
+      "transactionNo": "Transaction no",
+      "fcCode": "FC code",
+      "description": "Description",
+      "facultativeAccount": "Facultative account",
+      "rate": "Rate",
+      "amountCovered": "Amount covered",
+      "balance": "Balance",
+      "layer": "Layer",
+      "retAmount": "Ret amount",
+      "excess": "Excess",
+      "amountToRecover": "Amount to recover",
+      "amountRecovered": "Amount recovered",
+      "UWYR": "UWYR",
+      "poolRate": "Pool rate",
+      "poolAmt": "Pool amt",
+      "code": "Code",
+      "reiCode": "Rei code",
+      "shortDescription": "Short Description",
+      "reasonForPending": "Reason for pending",
+      "claimant": "Claimant",
+      "perilType": "Peril type",
+      "claimAmt": "Claim amt",
+      "adjAmt": "Adj amt",
+      "limitAmount": "Limit amount",
+      "excessAmt": "Excess amt",
+      "depreciation": "Depreciation",
+      "reserveAmount": "Reserve amount",
+      "recoveries": "Recoveries",
+      "salvages": "Salvages",
+      "payments": "Payments",
+      "remarks": "Remarks",
+      "underwritingRate": "Underwriting rate",
+      "reinsurerID": "Reinsurer ID",
+      "reinsurer": "Reinsurer",
+      "submissionStatus": "Submission status",
+      "treatyAmount": "Treaty amount",
+      "compRet": "Comp ret",
+      "amtToReserve": "Amt to reserve",
+      "recovered": "Recovered",
+      "type": "Type",
+      "value": "Value",
+
+      "transType": "Trans type",
+      "transNo": "Trans No",
+      "transDate": "Trans date",
+      "grossLiability": "Gross liability",
+      "netLiability": "Net liability",
+      "paidAmount": "Paid amount",
+      "authoriseBy": "Authorise by",
+      "authoriseDate": "Authorise date",
+      "action": "Action",
+      "revisionOwn": "Revision own",
+      "revisionAuthorised": "Revision authorised",
+      "ownShare": "Own share",
+      "revisionDate": "Revision date",
+      "revisionRemarks": "Revision remarks"
+
+
     }
   },
   "fms": {
