--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1137,6 +1137,125 @@
       "errorMessage": "Mensaje de Error",
       "postToEtims": "Publicar en Etims",
       "debitNote": "Nota de Débito"
+    },
+    "claimDetails": {
+      "claimDetails": "Detalles de la reclamación",
+      "claimTransactionDetails": "Detalles de la transacción de reclamación",
+      "claimNo": "N° de reclamación",
+      "insured": "Asegurado",
+      "riskWEF": "Riesgo WEF",
+      "nextReviewDate": "Fecha de revisión siguiente",
+      "intermediary": "Intermediario",
+      "clientName": "Nombre del cliente",
+      "risk": "Riesgo",
+      "riskWET": "Riesgo WET",
+      "lossDescription": "Descripción de la pérdida",
+      "claimRemarks": "Observaciones de la reclamación",
+      "product": "Producto",
+      "riskValue": "Valor del riesgo",
+      "claimLossDate": "Fecha de pérdida de la reclamación",
+      "claimNotificationDate": "Fecha de notificación de la reclamación",
+      "currency": "Moneda",
+      "transactionType": "Tipo de transacción",
+      "voucherNo": "N° de vale",
+      "paymentDate": "Fecha de pago",
+      "authorisedDate": "Fecha autorizada",
+      "invoiceNo": "N° de factura",
+      "paymentType": "Tipo de pago",
+      "bankAccount": "Cuenta bancaria",
+      "chequeNo": "N° de cheque",
+      "exciseDuty": "Impuesto especial",
+      "payee": "Beneficiario",
+      "paymentMode": "Modo de pago",
+      "authorised": "Autorizado",
+      "ownGrossAmount": "Monto bruto propio",
+      "voucherCurrency": "Moneda del vale",
+      "wHTXAmount": "Monto WHTX",
+      "netPaid": "Neto pagado",
+      "retention": "Retención",
+      "correspondent": "Corresponsal",
+      "coinAmount": "Monto de la moneda",
+      "authorisedBy": "Autorizado por",
+      "accountType": "Tipo de cuenta",
+      "baseCurrency": "Moneda base",
+      "invoiceAmount": "Monto de la factura",
+      "paymentDesc": "Descripción del pago",
+      "reinstatementAmt": "Monto de reinstalación",
+      "perilId": "ID de peligro",
+      "peril": "Peligro",
+      "voucherAmountType": "Tipo de monto del vale",
+      "excessAllowed": "Exceso permitido",
+      "excessAmount": "Monto del exceso",
+      "noviceExcessAmt": "Monto del exceso para novatos",
+      "reinstatementAmount": "Monto de reinstalación",
+      "desc": "Descripción",
+      "amount": "Monto",
+      "withholdVAT": "Retener IVA",
+      "vatRate": "Tasa de IVA",
+      "vatAmount": "Monto de IVA",
+      "whtx": "Impuesto retenido",
+      "whtxRate": "Tasa de impuesto retenido",
+      "whtxAmount": "Monto de impuesto retenido",
+      "exciseDuty": "Impuesto especial",
+      "exciseDutyRate": "Tasa de impuesto especial",
+      "accountNo": "Número de cuenta",
+      "bank": "Banco",
+      "bankBranch": "Sucursal bancaria",
+      "transactionNo": "N° de transacción",
+      "fcCode": "Código FC",
+      "description": "Descripción",
+      "facultativeAccount": "Cuenta facultativa",
+      "rate": "Tasa",
+      "amountCovered": "Monto cubierto",
+      "balance": "Saldo",
+      "layer": "Capa",
+      "retAmount": "Monto de retención",
+      "excess": "Exceso",
+      "amountToRecover": "Monto a recuperar",
+      "amountRecovered": "Monto recuperado",
+      "UWYR": "UWYR",
+      "poolRate": "Tasa del fondo común",
+      "poolAmt": "Monto del fondo común",
+      "code": "Código",
+      "reiCode": "Código de reaseguro",
+      "shortDescription": "Descripción breve",
+      "reasonForPending": "Razón pendiente",
+      "claimant": "Reclamante",
+      "perilType": "Tipo de peligro",
+      "claimAmt": "Monto de la reclamación",
+      "adjAmt": "Monto ajustado",
+      "limitAmount": "Monto límite",
+      "excessAmt": "Monto excedente",
+      "depreciation": "Depreciación",
+      "reserveAmount": "Monto de reserva",
+      "recoveries": "Recuperaciones",
+      "salvages": "Salvamentos",
+      "payments": "Pagos",
+      "remarks": "Observaciones",
+      "underwritingRate": "Tasa de suscripción",
+      "reinsurerID": "ID del reasegurador",
+      "reinsurer": "Reasegurador",
+      "submissionStatus": "Estado de la presentación",
+      "treatyAmount": "Monto del tratado",
+      "compRet": "Retención de la compañía",
+      "amtToReserve": "Monto a reservar",
+      "recovered": "Recuperado",
+      "type": "Tipo",
+      "value": "Valor",
+      "transType": "Tipo de trans",
+      "transNo": "Núm. de trans",
+      "transDate": "Fecha de trans",
+      "grossLiability": "Responsabilidad bruta",
+      "netLiability": "Responsabilidad neta",
+      "paidAmount": "Monto pagado",
+      "authoriseBy": "Autorizado por",
+      "authoriseDate": "Fecha de autorización",
+      "action": "Acción",
+      "revisionOwn": "Revisión propia",
+      "revisionAuthorised": "Revisión autorizada",
+      "ownShare": "Parte propia",
+      "revisionDate": "Fecha de revisión",
+      "revisionRemarks": "Comentarios de revisión"
     }
   },
   "fms": {
