--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1140,6 +1140,125 @@
       "errorMessage": "Message d'Erreur",
       "postToEtims": "Publier sur Etims",
       "debitNote": "Note de Débit"
+    },
+    "claimDetails": {
+      "claimDetails": "Détails de la réclamation",
+      "claimTransactionDetails": "Détails de la transaction de réclamation",
+      "claimNo": "N° de réclamation",
+      "insured": "Assuré",
+      "riskWEF": "Risque WEF",
+      "nextReviewDate": "Date de révision suivante",
+      "intermediary": "Intermédiaire",
+      "clientName": "Nom du client",
+      "risk": "Risque",
+      "riskWET": "Risque WET",
+      "lossDescription": "Description de la perte",
+      "claimRemarks": "Remarques de réclamation",
+      "product": "Produit",
+      "riskValue": "Valeur du risque",
+      "claimLossDate": "Date de la perte de réclamation",
+      "claimNotificationDate": "Date de notification de réclamation",
+      "currency": "Devise",
+      "transactionType": "Type de transaction",
+      "voucherNo": "N° de bon",
+      "paymentDate": "Date de paiement",
+      "authorisedDate": "Date autorisée",
+      "invoiceNo": "N° de facture",
+      "paymentType": "Type de paiement",
+      "bankAccount": "Compte bancaire",
+      "chequeNo": "N° de chèque",
+      "exciseDuty": "Droits d'accise",
+      "payee": "Bénéficiaire",
+      "paymentMode": "Mode de paiement",
+      "authorised": "Autorisé",
+      "ownGrossAmount": "Montant brut propre",
+      "voucherCurrency": "Devise du bon",
+      "wHTXAmount": "Montant WHTX",
+      "netPaid": "Net payé",
+      "retention": "Rétention",
+      "correspondent": "Correspondant",
+      "coinAmount": "Montant de la pièce",
+      "authorisedBy": "Autorisé par",
+      "accountType": "Type de compte",
+      "baseCurrency": "Devise de base",
+      "invoiceAmount": "Montant de la facture",
+      "paymentDesc": "Description du paiement",
+      "reinstatementAmt": "Montant de réintégration",
+      "perilId": "ID du péril",
+      "peril": "Péril",
+      "voucherAmountType": "Type de montant de bon",
+      "excessAllowed": "Excès autorisé",
+      "excessAmount": "Montant de l'excès",
+      "noviceExcessAmt": "Montant d'excès novice",
+      "reinstatementAmount": "Montant de réintégration",
+      "desc": "Description",
+      "amount": "Montant",
+      "withholdVAT": "Retenir la TVA",
+      "vatRate": "Taux de TVA",
+      "vatAmount": "Montant de la TVA",
+      "whtx": "Impôt à la source",
+      "whtxRate": "Taux de l'impôt à la source",
+      "whtxAmount": "Montant de l'impôt à la source",
+      "exciseDuty": "Droit d'accise",
+      "exciseDutyRate": "Taux du droit d'accise",
+      "accountNo": "Numéro de compte",
+      "bank": "Banque",
+      "bankBranch": "Agence bancaire",
+      "transactionNo": "N° de transaction",
+      "fcCode": "Code FC",
+      "description": "Description",
+      "facultativeAccount": "Compte facultatif",
+      "rate": "Taux",
+      "amountCovered": "Montant couvert",
+      "balance": "Solde",
+      "layer": "Couche",
+      "retAmount": "Montant à retenir",
+      "excess": "Excédent",
+      "amountToRecover": "Montant à récupérer",
+      "amountRecovered": "Montant récupéré",
+      "UWYR": "UWYR",
+      "poolRate": "Taux de pool",
+      "poolAmt": "Montant du pool",
+      "code": "Code",
+      "reiCode": "Code rei",
+      "shortDescription": "Brève description",
+      "reasonForPending": "Raison de l'attente",
+      "claimant": "Demandeur",
+      "perilType": "Type de péril",
+      "claimAmt": "Montant de la réclamation",
+      "adjAmt": "Montant ajusté",
+      "limitAmount": "Montant limite",
+      "excessAmt": "Montant excédentaire",
+      "depreciation": "Dépréciation",
+      "reserveAmount": "Montant de réserve",
+      "recoveries": "Recouvrements",
+      "salvages": "Sauvetages",
+      "payments": "Paiements",
+      "remarks": "Remarques",
+      "underwritingRate": "Taux de souscription",
+      "reinsurerID": "ID du réassureur",
+      "reinsurer": "Réassureur",
+      "submissionStatus": "Statut de soumission",
+      "treatyAmount": "Montant du traité",
+      "compRet": "Comp. ret.",
+      "amtToReserve": "Montant à réserver",
+      "recovered": "Récupéré",
+      "type": "Type",
+      "value": "Valeur",
+      "transType": "Type de trans",
+      "transNo": "Numéro de trans",
+      "transDate": "Date de trans",
+      "grossLiability": "Responsabilité brute",
+      "netLiability": "Responsabilité nette",
+      "paidAmount": "Montant payé",
+      "authoriseBy": "Autorisé par",
+      "authoriseDate": "Date d'autorisation",
+      "action": "Action",
+      "revisionOwn": "Révision propre",
+      "revisionAuthorised": "Révision autorisée",
+      "ownShare": "Propre part",
+      "revisionDate": "Date de révision",
+      "revisionRemarks": "Remarques de révision"
     }
   },
   "fms": {
