--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -1140,6 +1140,125 @@
       "errorMessage": "Ujumbe wa Kosa",
       "postToEtims": "Tuma kwa Etims",
       "debitNote": "Nakala ya Deni"
+    },
+    "claimDetails": {
+      "claimDetails": "Maelezo ya Madai",
+      "claimTransactionDetails": "Maelezo ya Muamala wa Madai",
+      "claimNo": "Nambari ya Madai",
+      "insured": "Bima",
+      "riskWEF": "Hatari kutoka",
+      "nextReviewDate": "Tarehe ya Mapitio Ifuatayo",
+      "intermediary": "Wakala",
+      "clientName": "Jina la Mteja",
+      "risk": "Hatari",
+      "riskWET": "Hatari hadi",
+      "lossDescription": "Maelezo ya Hasara",
+      "claimRemarks": "Maoni ya Madai",
+      "product": "Bidhaa",
+      "riskValue": "Thamani ya Hatari",
+      "claimLossDate": "Tarehe ya Hasara",
+      "claimNotificationDate": "Tarehe ya Taarifa ya Madai",
+      "currency": "Sarafu",
+      "transactionType": "Aina ya Muamala",
+      "voucherNo": "Nambari ya Vocha",
+      "paymentDate": "Tarehe ya Malipo",
+      "authorisedDate": "Tarehe ya Idhini",
+      "invoiceNo": "Nambari ya Ankara",
+      "paymentType": "Aina ya Malipo",
+      "bankAccount": "Akaunti ya Benki",
+      "chequeNo": "Nambari ya Hundi",
+      "exciseDuty": "Ushuru",
+      "payee": "Mpokeaji",
+      "paymentMode": "Njia ya Malipo",
+      "authorised": "Imeidhinishwa",
+      "ownGrossAmount": "Kiasi cha Jumla",
+      "voucherCurrency": "Sarafu ya Vocha",
+      "wHTXAmount": "Kiasi cha WHTX",
+      "netPaid": "Neti Iliyolipwa",
+      "retention": "Uhifadhi",
+      "correspondent": "Mwandishi",
+      "coinAmount": "Kiasi cha Sarafu",
+      "authorisedBy": "Imeidhinishwa na",
+      "accountType": "Aina ya Akaunti",
+      "baseCurrency": "Sarafu ya Msingi",
+      "invoiceAmount": "Kiasi cha Ankara",
+      "paymentDesc": "Maelezo ya Malipo",
+      "reinstatementAmt": "Kiasi cha Urejeshaji",
+      "perilId": "Kitambulisho cha hatari",
+      "peril": "Hatari",
+      "voucherAmountType": "Aina ya kiasi cha vocha",
+      "excessAllowed": "Ziada inaruhusiwa",
+      "excessAmount": "Kiasi cha ziada",
+      "noviceExcessAmt": "Kiasi cha ziada cha mwanafunzi",
+      "reinstatementAmount": "Kiasi cha urejeshaji",
+      "desc": "Maelezo",
+      "amount": "Kiasi",
+      "withholdVAT": "Zuia VAT",
+      "vatRate": "Kiwango cha VAT",
+      "vatAmount": "Kiasi cha VAT",
+      "whtx": "Kodi ya mapato",
+      "whtxRate": "Kiwango cha kodi ya mapato",
+      "whtxAmount": "Kiasi cha kodi ya mapato",
+      "exciseDuty": "Kodi ya matumizi",
+      "exciseDutyRate": "Kiwango cha kodi ya matumizi",
+      "accountNo": "Nambari ya akaunti",
+      "bank": "Benki",
+      "bankBranch": "Tawi la benki",
+      "transactionNo": "Nambari ya muamala",
+      "fcCode": "Nambari ya FC",
+      "description": "Maelezo",
+      "facultativeAccount": "Akaunti ya hiari",
+      "rate": "Kiwango",
+      "amountCovered": "Kiasi kilichofunikwa",
+      "balance": "Salio",
+      "layer": "Safi",
+      "retAmount": "Kiasi cha kubakiza",
+      "excess": "Ziada",
+      "amountToRecover": "Kiasi cha kurudisha",
+      "amountRecovered": "Kiasi kilichorudishwa",
+      "UWYR": "UWYR",
+      "poolRate": "Kiwango cha kundi",
+      "poolAmt": "Kiasi cha kundi",
+      "code": "Msimbo",
+      "reiCode": "Msimbo wa rei",
+      "shortDescription": "Maelezo mafupi",
+      "reasonForPending": "Sababu ya kusubiri",
+      "claimant": "Mdai",
+      "perilType": "Aina ya hatari",
+      "claimAmt": "Kiasi cha dai",
+      "adjAmt": "Kiasi kilichorekebishwa",
+      "limitAmount": "Kiasi cha kikomo",
+      "excessAmt": "Kiasi cha ziada",
+      "depreciation": "Upunguzaji thamani",
+      "reserveAmount": "Kiasi cha akiba",
+      "recoveries": "Madai yaliyorejeshwa",
+      "salvages": "Uokoaji",
+      "payments": "Malipo",
+      "remarks": "Maoni",
+      "underwritingRate": "Kiwango cha uandikishaji",
+      "reinsurerID": "Kitambulisho cha reinsurance",
+      "reinsurer": "Reinsurance",
+      "submissionStatus": "Hali ya uwasilishaji",
+      "treatyAmount": "Kiasi cha mkataba",
+      "compRet": "Ret. ya kampuni",
+      "amtToReserve": "Kiasi cha kuweka akiba",
+      "recovered": "Imerudishwa",
+      "type": "Aina",
+      "value": "Thamani",
+      "transType": "Aina ya muamala",
+      "transNo": "Nambari ya muamala",
+      "transDate": "Tarehe ya muamala",
+      "grossLiability": "Jukumu kubwa",
+      "netLiability": "Jukumu halisi",
+      "paidAmount": "Kiasi kilicholipwa",
+      "authoriseBy": "Kuridhia na",
+      "authoriseDate": "Tarehe ya kuridhia",
+      "action": "Kitendo",
+      "revisionOwn": "Marekebisho ya mwenyewe",
+      "revisionAuthorised": "Marekebisho yameruhusiwa",
+      "ownShare": "Sehemu ya mwenyewe",
+      "revisionDate": "Tarehe ya marekebisho",
+      "revisionRemarks": "Maoni ya marekebisho"
     }
   },
   "fms": {
