VQ-2397: Ability to edit AML details

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -548,7 +548,8 @@
     "withholding_tax_required": "Withholding Tax is required",
     "yes": "Yes",
     "zero": "Zero",
-    "update_details": "Update details"
+    "update_details": "Update details",
+    "company": "Company"
   },
   "gis": {
     "quotation": {
